--- a/LaunchScreen.storyboard
+++ b/LaunchScreen.storyboard
@@ -17,9 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launcherimage.png" translatesAutoresizingMaskIntoConstraints="NO" id="n31-ZJ-3cB">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launcherimage" translatesAutoresizingMaskIntoConstraints="NO" id="n31-ZJ-3cB">
                                 <rect key="frame" x="113" y="281" width="149" height="105"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="studio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFi-MC-Lys">
+                                <rect key="frame" x="176" y="352" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" red="0.97254901959999995" green="0.49019607840000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -31,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launcherimage.png" width="427" height="152"/>
+        <image name="launcherimage" width="427" height="152"/>
     </resources>
 </document>
