--- a/Guessor/Base.lproj/Main.storyboard
+++ b/Guessor/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Myriad-Pro-Black_31623.ttf">
@@ -23,51 +22,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAU-Yg-ttx">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAU-Yg-ttx">
                                 <rect key="frame" x="102" y="103" width="80" height="80"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.69803921570000005" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="3wZ-9U-mGi"/>
-                                    <constraint firstAttribute="width" constant="80" id="QhW-gY-mzM"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSB-wY-vbj">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSB-wY-vbj">
                                 <rect key="frame" x="192" y="103" width="80" height="80"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="0.49019607840000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="H9C-V1-KUT"/>
-                                    <constraint firstAttribute="width" constant="80" id="w78-Fw-dex"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="987-QS-1fq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="987-QS-1fq">
                                 <rect key="frame" x="102" y="191" width="80" height="80"/>
                                 <color key="backgroundColor" red="0.60392156860000001" green="0.8862745098" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Agy-kf-tGD"/>
-                                    <constraint firstAttribute="width" constant="80" id="VOw-gC-FfO"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSD-TR-SeF">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSD-TR-SeF">
                                 <rect key="frame" x="192" y="191" width="80" height="80"/>
                                 <color key="backgroundColor" red="0.66274509800000003" green="0.75294117650000003" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="6Wb-bV-QLN"/>
-                                    <constraint firstAttribute="width" constant="80" id="Fmu-1d-K83"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="js9-t5-ucy">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="js9-t5-ucy">
                                 <rect key="frame" x="85" y="356" width="204" height="51"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="0.49019607840000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
@@ -78,7 +61,7 @@
                                     <segue destination="i14-yE-1Lw" kind="show" id="36u-Gk-WAe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vdg-Jl-J3Y">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vdg-Jl-J3Y">
                                 <rect key="frame" x="85" y="415" width="204" height="51"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="0.49019607840000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -86,7 +69,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JV9-uD-JuX">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JV9-uD-JuX">
                                 <rect key="frame" x="85" y="474" width="204" height="51"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="0.49019607840000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -94,44 +77,21 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="music" translatesAutoresizingMaskIntoConstraints="NO" id="eTW-9N-gVg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music" translatesAutoresizingMaskIntoConstraints="NO" id="eTW-9N-gVg">
                                 <rect key="frame" x="305" y="609" width="40" height="40"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATg-5B-qFD">
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATg-5B-qFD">
                                 <rect key="frame" x="300" y="604" width="50" height="50"/>
                                 <connections>
                                     <action selector="musicButton:" destination="34A-ff-ktE" eventType="touchDown" id="UJB-FI-D3z"/>
                                     <action selector="musicButtonRelease:" destination="34A-ff-ktE" eventType="touchUpInside" id="6cP-ba-HKK"/>
                                 </connections>
                             </button>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="block" translatesAutoresizingMaskIntoConstraints="NO" id="v0z-1G-GFo">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="block" translatesAutoresizingMaskIntoConstraints="NO" id="v0z-1G-GFo">
                                 <rect key="frame" x="305" y="609" width="40" height="40"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Lpl-qI-b4x" firstAttribute="top" secondItem="JV9-uD-JuX" secondAttribute="bottom" constant="142" id="2wV-hS-Nuo"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="eTW-9N-gVg" secondAttribute="trailing" constant="10" id="3Oq-GB-81s"/>
-                            <constraint firstItem="v0z-1G-GFo" firstAttribute="top" secondItem="wP3-rn-egJ" secondAttribute="bottom" constant="589" id="DGW-xv-nnx"/>
-                            <constraint firstItem="Lpl-qI-b4x" firstAttribute="top" secondItem="v0z-1G-GFo" secondAttribute="bottom" constant="18" id="ERK-FA-VCF"/>
-                            <constraint firstItem="vdg-Jl-J3Y" firstAttribute="top" secondItem="js9-t5-ucy" secondAttribute="bottom" constant="8" id="HTS-fV-2NM"/>
-                            <constraint firstItem="v0z-1G-GFo" firstAttribute="leading" secondItem="lve-Sr-pqZ" secondAttribute="leadingMargin" constant="285" id="KwW-0A-DqL"/>
-                            <constraint firstItem="JV9-uD-JuX" firstAttribute="top" secondItem="vdg-Jl-J3Y" secondAttribute="bottom" constant="8" id="NqT-5y-jsb"/>
-                            <constraint firstItem="eTW-9N-gVg" firstAttribute="top" secondItem="wP3-rn-egJ" secondAttribute="bottom" constant="589" id="Qdk-9R-M00"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="js9-t5-ucy" secondAttribute="trailing" constant="66" id="SLy-cv-g3O"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="v0z-1G-GFo" secondAttribute="trailing" constant="10" id="U8U-DK-VI0"/>
-                            <constraint firstItem="ATg-5B-qFD" firstAttribute="leading" secondItem="lve-Sr-pqZ" secondAttribute="leadingMargin" constant="280" id="YHe-be-2s3"/>
-                            <constraint firstItem="eTW-9N-gVg" firstAttribute="leading" secondItem="lve-Sr-pqZ" secondAttribute="leadingMargin" constant="285" id="h9K-bL-Q1G"/>
-                            <constraint firstItem="Lpl-qI-b4x" firstAttribute="top" secondItem="ATg-5B-qFD" secondAttribute="bottom" constant="13" id="hgs-kx-qta"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ATg-5B-qFD" secondAttribute="trailing" constant="5" id="j5J-MI-ukY"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="JV9-uD-JuX" secondAttribute="trailing" constant="66" id="juY-SR-hKy"/>
-                            <constraint firstItem="JV9-uD-JuX" firstAttribute="leading" secondItem="lve-Sr-pqZ" secondAttribute="leadingMargin" constant="65" id="muj-o8-zob"/>
-                            <constraint firstItem="Lpl-qI-b4x" firstAttribute="top" secondItem="eTW-9N-gVg" secondAttribute="bottom" constant="18" id="nnt-iO-i4a"/>
-                            <constraint firstItem="ATg-5B-qFD" firstAttribute="top" secondItem="wP3-rn-egJ" secondAttribute="bottom" constant="584" id="ruY-KU-huy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="vdg-Jl-J3Y" secondAttribute="trailing" constant="66" id="sk7-5G-EaB"/>
-                            <constraint firstItem="vdg-Jl-J3Y" firstAttribute="leading" secondItem="lve-Sr-pqZ" secondAttribute="leadingMargin" constant="65" id="tov-1p-67V"/>
-                            <constraint firstItem="js9-t5-ucy" firstAttribute="leading" secondItem="lve-Sr-pqZ" secondAttribute="leadingMargin" constant="65" id="w7v-nS-9zh"/>
-                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
